--- a/test.html
+++ b/test.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <title>Embed demo</title>
   <link rel="stylesheet" href="bower_components/jquery-ui/themes/base/jquery-ui.css">
-  <link rel="stylesheet" type="text/css" href="src/jq-gh-embed.css">
+  <link rel="stylesheet" type="text/css" href="src/jquery.gh-embed.css">
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
   <script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.10.0/styles/default.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.10.0/highlight.min.js"></script>
 
-  <script src="src/jq-gh-embed.js"></script>
-  <!--<script src="src/locales/jq-gh-embed-ja.js"></script>-->
+  <script src="src/jquery.gh-embed.js"></script>
+  <!--<script src="src/locales/jquery.gh-embed-ja.js"></script>-->
 </head>
 
 <body>
